# repoteer

./: .gitignore  Cargo.toml  DESIGN.md  README.md  flake.nix
src/: config.rs  main.rs  manifest.rs  operations.rs
src/cli/: args.rs  command.rs  commands.rs
test/tomlfiles/: emptyrepo.toml  multirepo.toml  singlerepo.toml
