[package]
name = "repoteer"
version = "0.1.0"
authors = [ "tbreslein <github.com/tbreslein>" ]
edition = "2021"
description = "CLI tool for keeping multiple git repositories in sync"
repository = "https://github.com/tbreslein/repoteer/"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
toml = "0.5.9"
