[package]
name = "repoteer"
version = "0.2.0"
authors = [ "tbreslein <github.com/tbreslein>" ]
edition = "2021"
description = "CLI tool for keeping multiple git repositories in sync"
repository = "https://github.com/tbreslein/repoteer/"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
color-eyre = "0.6.2"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
